# lenny-api

./: pyproject.toml  test1.ipynb
analysis_algo/: technical_analysis_algos.py  v2.py
app/: __init__.py  database.py  routes.py  utils.py
app/analysis_algo/: v2.py
app/tasks/: refresh_sp500.py
