[tool.poetry]
name = "lenny-api"
version = "0.1.0"
description = ""
authors = ["Charles Buffington <dev.cfsb@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
pandas = "^2.2.2"
yfinance = "^0.2.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
