[tool.poetry]
name = "lenny-api"
version = "0.1.0"
description = ""
authors = ["Charles Buffington <dev.cfsb@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.16"
pandas = "^2.2.2"
yfinance = "^0.2.38"
fastapi-restful = "==0.5.0"
typing-inspect = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
